--- a/charts/auth-service/Chart.yaml
+++ b/charts/auth-service/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.18
+version: 0.1.19
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -26,9 +26,9 @@ appVersion: "0.0.1"
 # kubeVersion: ">=1.17.0-0"
 
 dependencies:
-  - name: postgresql
-    version: "^0"
-    repository: "https://htaic.github.io/helm-charts"
+  # - name: postgresql
+  #   version: "^0"
+  #   repository: "https://htaic.github.io/helm-charts"
   - name: oathkeeper
     version: "0.25.6"
     repository: "https://k8s.ory.sh/helm/charts"
@@ -37,4 +37,4 @@ dependencies:
     repository: "https://k8s.ory.sh/helm/charts"
   - name: keto
     version: "0.25.6"
-    repository: "https://k8s.ory.sh/helm/charts"
+    repository: "https://k8s.ory.sh/helm/charts" 
