--- a/charts/baseline-ory/Chart.yaml
+++ b/charts/baseline-ory/Chart.yaml
@@ -45,6 +45,7 @@ dependencies:
   - name: auth-service
     version: "0.1.18"
     repository: "https://htaic.github.io/helm-charts"
-  - name: postgresql
-    version: "^0"
-    repository: "https://htaic.github.io/helm-charts"   
+  - name: org-service
+    version: "^0.1.3"
+    repository: "https://htaic.github.io/helm-charts"
+ 
