--- a/charts/baseline-ory/Chart.yaml
+++ b/charts/baseline-ory/Chart.yaml
@@ -43,9 +43,11 @@ dependencies:
     repository: "https://htaic.github.io/helm-charts"
   # the auth service back end
   - name: auth-service
-    version: "0.1.18"
+    version: "^0.1.18"
     repository: "https://htaic.github.io/helm-charts"
   - name: org-service
     version: "^0.1.3"
     repository: "https://htaic.github.io/helm-charts"
- 
+   - name: postgresql
+    version: "0.1.8"
+    repository: "https://htaic.github.io/helm-charts"
