--- a/charts/complete-org-service/templates/deployment.yaml
+++ b/charts/complete-org-service/templates/deployment.yaml
@@ -29,6 +29,21 @@ spec:
       serviceAccountName: {{ include ".helm.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- if .Values.postgresUpdater }}
+      initContainers:
+        - name: {{ .Chart.Name }}-postgres-provisioner
+          image: {{ .Values.postgresUpdater }}:{{ .Values.image.tag }}
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: APP_PASS
+              value: {{ .Values.postgresUpdater.app_pass }}
+          command: ['sh', '-c', '/home/developer/executecommands.sh']
+          envFrom:
+            - secretRef:
+                name: "{{ .Release.Name }}-postgresql-secret"
+            - configMapRef:
+                name: "{{ .Release.Name }}-configmap"
+      {{- end }}
       containers:
         {{- if .Values.sidecarimage }}
         - name: "{{ .Values.sidecarimage.name }}"
