--- a/charts/complete-baseline/Chart.yaml
+++ b/charts/complete-baseline/Chart.yaml
@@ -32,7 +32,7 @@ appVersion: "0.0.1"
 # https://github.com/traefik/traefik-helm-chart
 dependencies:
   - name: traefik
-    version: "10.24.2"
+    version: "^10.24.2"
     repository: https://helm.traefik.io/traefik
   - name: aws-efs-csi-driver
     version: "^2.2.8"
@@ -44,13 +44,13 @@ dependencies:
   # the auth service back end
   - name: complete-auth-service
     version: "^0"
-    # repository: "file://../complete-auth-service"
     repository: "https://htaic.github.io/helm-charts"
+    # repository: "file://../complete-auth-service"
   # the org service back end
   - name: complete-org-service
     version: "^0"
-    # repository: "file://../complete-org-service"
     repository: "https://htaic.github.io/helm-charts"
+    # repository: "file://../complete-org-service"
   - name: postgresql
     version: "^0"
     repository: "https://htaic.github.io/helm-charts"
