--- a/charts/rest-devicemanager/templates/middleware-strip.yaml
+++ b/charts/rest-devicemanager/templates/middleware-strip.yaml
@@ -1,11 +1,11 @@
-{{ if and (ne .Values.image.domainPath "") (not (hasKey .Values.image "noStripPath")) }}
+{{- if ((.Values.image).domainPath) -}}
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
   name: "{{ include ".helm.fullname" . }}-strip"
   namespace: {{ .Values.namespace }}
 spec:
-  stripPrefix:
-    prefixes:
+  stripPrefixRegex:
+    regex:
       - "/{{ .Values.image.domainPath }}"
 {{ end }}
