Adding changes from review

--- a/charts/kafka-rest/cp-kafka-rest/values-dev.yaml
+++ b/charts/kafka-rest/cp-kafka-rest/values-dev.yaml
@@ -99,8 +99,8 @@ cp-zookeeper:
 cp-schema-registry:
   url: ""
 
-##Plain Text,
+##Plain Text
 cp-kafka:
-  bootstrapServers: ""
+  bootstrapServers: "PLAINTEXT://b-1.mskhtdevsaasuw21.40fm05.c2.kafka.us-west-2.amazonaws.com:9092,PLAINTEXT://b-2.mskhtdevsaasuw21.40fm05.c2.kafka.us-west-2.amazonaws.com:9092,PLAINTEXT://b-3.mskhtdevsaasuw21.40fm05.c2.kafka.us-west-2.amazonaws.com:9092"
 
 
