--- a/charts/kafka-rest/cp-kafka-rest/templates/deployment.yaml
+++ b/charts/kafka-rest/cp-kafka-rest/templates/deployment.yaml
@@ -5,7 +5,7 @@ apiVersion: apps/v1beta2
 {{- end }}
 kind: Deployment
 metadata:
-  name: {{ template "cp-kafka-rest.fullname" . }}
+  name: {{ template "cp-kafka-rest.fullname" . }} ##TODO Fix name to be more readable
   labels:
     app: {{ template "cp-kafka-rest.name" . }}
     chart: {{ template "cp-kafka-rest.chart" . }}
@@ -71,7 +71,7 @@ spec:
 {{ toYaml .Values.resources | indent 12 }}
           env:
           - name: KAFKA_REST_HOST_NAME
-            value: k8s-ht-dev-saas-uw2-1.dev.hticdev.net ##TODO Extract Cluster name + DNS(dev.hticdev.net)
+            value: k8s-ht-dev-saas-uw2-1.dev.hticdev.net/kafka ##TODO Extract Cluster name + DNS(dev.hticdev.net)
           - name: KAFKA_REST_BOOTSTRAP_SERVERS
             value: {{ template "cp-kafka-rest.kafka.bootstrapServers" . }}
           - name: KAFKA_REST_SCHEMA_REGISTRY_URL
