--- a/charts/kafka-rest/values-template.yaml
+++ b/charts/kafka-rest/values-template.yaml
@@ -23,7 +23,8 @@ servicePort: 8082
 ## Kafka rest JVM Heap Option
 heapOptions: "-Xms512M -Xmx512M"
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -56,7 +57,8 @@ configurationOverrides:
   # "consumer.request.timeout.ms": 5000
 
 ## Additional env variables
-customEnv: {}
+customEnv:
+  {}
   # ZOOKEEPER_SASL_ENABLED: "false"
 
 ## Monitoring
@@ -81,14 +83,6 @@ prometheus:
     ## See the `resources` documentation above for details.
     resources: {}
 
-## External Access
-## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-loadbalancer
-external:
-  enabled: false
-  type: LoadBalancer
-  externalTrafficPolicy: Cluster
-  port: 8082
-
 ## If the Kafka Chart is disabled a URL of zookeeper are required to connect
 ## e.g. ungaged-sparrow-cp-zookeeper:2181
 cp-zookeeper:
@@ -102,5 +96,3 @@ cp-schema-registry:
 ##Plain Text ##TODO:Parameter store/Environment variables to store value
 cp-kafka:
   bootstrapServers: ""
-
-
