--- a/charts/kafka-rest/templates/service.yaml
+++ b/charts/kafka-rest/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "cp-kafka-rest.fullname" . }}
+  name: {{ template "cp-kafka-rest.name" . }}
   labels:
     app: {{ template "cp-kafka-rest.name" . }}
     chart: {{ template "cp-kafka-rest.chart" . }}
