--- a/charts/core-baseline/values.yaml
+++ b/charts/core-baseline/values.yaml
@@ -7,15 +7,6 @@ traefik:
     pullPolicy: Always
   service:
     type: LoadBalancer
-  # # enable this block for cloud mode
-  # service:
-  #   type: NodePort
-  # ports:
-  #   web:
-  #     # internal web port
-  #     port: 80
-  #     nodePort: 32414
-  #     targetPort: web
 
 redis:
   redis:
@@ -58,9 +49,12 @@ postgresql:
     maxReplicas: 100
     targetCPUUtilizationPercentage: 80
   postgres:
-    user: postgres
-    password: ImaPasswordPostgres
     db: postgres
+    user: postgres
+    password: YOUR_POSTGRES_PASSWORD
+    auth-db: auth
+    auth-user: auth_service
+    auth-password: YOUR_AUTH_DB_PASSWORD
     replicaCount: 1
     repository: postgres
     tag: 14
