--- a/charts/cloud-baseline/templates/auth-secret.yaml
+++ b/charts/cloud-baseline/templates/auth-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: "org-service-secret"
+  name: "auth-service-secret"
 data:
   DATABASE_PASSWORD: {{ .Values.postgresql.postgres.auth-password | b64enc }}
 stringData:
