chore: remove hardcoded "baseline"

--- a/charts/complete-auth-service/templates/forward-auth-middleware.yaml
+++ b/charts/complete-auth-service/templates/forward-auth-middleware.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ .Values.namespace }}
 spec:
   forwardAuth:
-    address: http://baseline-oathkeeper-api:4456/decisions
+    address: "http://{{ .Release.Name }}-oathkeeper-api:4456/decisions"
     authRequestHeaders:
     - accept
     - accept-encoding
