test: it doesn't like dashs here for some reason...

--- a/charts/core-baseline/values.yaml
+++ b/charts/core-baseline/values.yaml
@@ -52,9 +52,9 @@ postgresql:
     db: postgres
     user: postgres
     password: YOUR_POSTGRES_PASSWORD
-    auth-db: auth
-    auth-user: auth_service
-    auth-password: YOUR_AUTH_DB_PASSWORD
+    authdb: auth
+    authuser: auth_service
+    authpassword: YOUR_AUTH_DB_PASSWORD
     replicaCount: 1
     repository: postgres
     tag: 14
