test: add edge charts and update redis secrets

--- a/charts/redis/templates/secret.yaml
+++ b/charts/redis/templates/secret.yaml
@@ -3,4 +3,6 @@ kind: Secret
 metadata:
   name: "{{ include ".helm.fullname" . }}-secret"
 data:
+  REDISHOST: {{ .Values.redis.hostname }}
+  REDISPORT: {{ .Values.redis.containerPort }}
   REDIS_PASSWORD: {{ .Values.redis.password | b64enc }}
