--- a/charts/core-baseline/Chart.yaml
+++ b/charts/core-baseline/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.2
+version: 0.0.3
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -39,4 +39,5 @@ dependencies:
     repository: "https://htaic.github.io/helm-charts"
   - name: redis
     version: "^0"
-    repository: "https://htaic.github.io/helm-charts"
+    # repository: "https://htaic.github.io/helm-charts"
+    repository: "file://../redis"
