test: fix string vs data

--- a/charts/redis/templates/secret.yaml
+++ b/charts/redis/templates/secret.yaml
@@ -3,6 +3,7 @@ kind: Secret
 metadata:
   name: "{{ include ".helm.fullname" . }}-secret"
 data:
+  REDIS_PASSWORD: {{ .Values.redis.password | b64enc }}
+stringData:
   REDISHOST: {{ .Values.redis.hostname }}
   REDISPORT: {{ .Values.redis.containerPort }}
-  REDIS_PASSWORD: {{ .Values.redis.password | b64enc }}
