chore: needs quotes...

--- a/charts/redis/templates/secret.yaml
+++ b/charts/redis/templates/secret.yaml
@@ -6,4 +6,4 @@ data:
   REDIS_PASSWORD: {{ .Values.redis.password | b64enc }}
 stringData:
   REDISHOST: {{ .Values.redis.hostname }}
-  REDISPORT: {{ .Values.redis.containerPort }}
+  REDISPORT: "{{ .Values.redis.containerPort }}"
