chore: edge redis hard code... need to remove after testing

--- a/charts/core-baseline/values.yaml
+++ b/charts/core-baseline/values.yaml
@@ -11,6 +11,8 @@ traefik:
 redis:
   redis:
     password: YOUR_REDIS_PASSWORD
+    # this is hard coded somewhere in dcsManager...
+    hostname: edge-redis
 
 postgresql:
   service:
