--- a/charts/redis/templates/secret.yaml
+++ b/charts/redis/templates/secret.yaml
@@ -5,5 +5,5 @@ metadata:
 data:
   REDIS_PASSWORD: {{ .Values.redis.password | b64enc }}
 stringData:
-  REDISHOST: {{ .Values.redis.hostname }}
-  REDISPORT: "{{ .Values.redis.containerPort }}"
+  REDIS_HOST: {{ .Values.redis.hostname }}
+  REDIS_PORT: "{{ .Values.redis.containerPort }}"
