--- a/charts/core-baseline/values.yaml
+++ b/charts/core-baseline/values.yaml
@@ -12,7 +12,7 @@ redis:
   redis:
     password: YOUR_REDIS_PASSWORD
     # this is hard coded somewhere in dcsManager...
-    hostname: edge-redis
+    # hostname: edge-redis
 
 postgresql:
   service:
