feat: add secrets values

--- a/charts/redis/templates/secret.yaml
+++ b/charts/redis/templates/secret.yaml
@@ -4,3 +4,6 @@ metadata:
   name: "{{ include ".helm.fullname" . }}-secret"
 data:
   REDIS_PASSWORD: {{ .Values.redis.password | b64enc }}
+stringData:
+  REDIS_HOST: {{ .Values.redis.hostname }}
+  REDIS_PORT: "{{ .Values.redis.containerPort }}"
