chore: refactor and testing

--- a/charts/complete-auth-service/templates/deployment.yaml
+++ b/charts/complete-auth-service/templates/deployment.yaml
@@ -38,13 +38,11 @@ spec:
           image: {{ .Values.postgresUpdater.image }}:{{ .Values.image.tag }}
           {{ end }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          env:
-            - name: APP_PASS
-              value: {{ .Values.postgresUpdater.app_pass }}
           command: ['sh', '-c', '/home/developer/executecommands.sh']
           envFrom:
             - secretRef:
                 name: "baseline-postgresql-secret"
+                name: "auth-service-secret"
             - configMapRef:
                 name: "baseline-configmap"
       {{- end }}
@@ -68,6 +66,11 @@ spec:
             - name: http
               containerPort: {{ .Values.image.containerPort }}
               protocol: TCP
+          envFrom:
+            - secretRef:
+                name: "auth-service-secret"
+            - configMapRef:
+                name: "{{ .Release.Name }}-ory-keto-configmap"           
           livenessProbe:
             httpGet:
               path: /{{ .Values.image.livenessProbe }}
