--- a/charts/cloud-baseline/values.yaml
+++ b/charts/cloud-baseline/values.yaml
@@ -38,6 +38,22 @@ redis:
     maxReplicas: 100
     targetCPUUtilizationPercentage: 80
 
+# https://github.com/kubernetes-sigs/aws-efs-csi-driver/blob/master/charts/aws-efs-csi-driver/values.yaml
+aws-efs-csi-driver:
+  controller:
+    serviceAccount:
+      create: true
+      name: efs-csi-controller-sa
+      annotations:
+        eks.amazonaws.com/role-arn: arn:aws:iam::YOUR_AWS_ACCOUNT_ID:role/YOUR_EKS_ROLE
+  storageClasses:
+    - name: efs-storageclass
+      mountOptions:
+        - tls
+      parameters:
+        provisioningMode: efs-ap
+        fileSystemId: YOUR_FILESYSTEM_ID
+
 postgresql:
   service:
     type: ClusterIP
@@ -55,9 +71,15 @@ postgresql:
     maxReplicas: 100
     targetCPUUtilizationPercentage: 80
   postgres:
+    db: postgres
     user: postgres
     password: YOUR_POSTGRES_PASSWORD
-    db: postgres
+    org-db: org_management
+    org-user: org_management_service
+    org-password: YOUR_ORG_DB_PASSWORD
+    auth-db: auth
+    auth-user: auth_service
+    auth-password: YOUR_AUTH_DB_PASSWORD
     replicaCount: 1
     repository: postgres
     tag: 14
@@ -67,6 +89,16 @@ postgresql:
       # https://hub.docker.com/_/postgres
       - name: PGDATA
         value: /var/lib/postgresql/data/postgres # # To enable EFS on the cluster, use the following values in the root helm chart
+  storage:
+    className: efs-storageclass
+    provisioner: efs.csi.aws.com
+    capacity: 20Gi
+    volumeMode: Filesystem
+    csi:
+      volumeHandle: YOUR_FILESYSTEM_ID
+      volumeAttributes:
+        encryptInTransit: "true"
+    volumeMountPath: /var/lib/postgresql/data
 
 # https://github.com/htaic/helm-charts/blob/main/charts/reporting-service/values.yaml.example   
 reporting-services:
