--- a/charts/core-edge/Chart.yaml
+++ b/charts/core-edge/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: complete-auth-service
-description: A Helm chart for Kubernetes micro auth services
+name: core-edge
+description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,23 +15,20 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.24
+version: 0.1.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "0.0.1"
+appVersion: "1.16.0"
 
-# kubeVersion: ">=1.17.0-0"
-
-dependencies:
-  - name: oathkeeper
-    version: "0.25.6"
-    repository: "https://k8s.ory.sh/helm/charts"
-  - name: kratos
-    version: "0.27.0"
-    repository: "https://k8s.ory.sh/helm/charts"
-  - name: keto
-    version: "0.25.6"
-    repository: "https://k8s.ory.sh/helm/charts"
+# these dependencies need to be installed, however its recommended to use the baselines to add these to
+# use standards around provisioning devices
+# dependencies:
+#   - name: postgresql
+#     version: "^0"
+#     repository: "https://htaic.github.io/helm-charts"
+#   - name: redis
+#     version: "^0"
+#     repository: "https://htaic.github.io/helm-charts"
