--- a/charts/core-edge/templates/key-manager.yaml
+++ b/charts/core-edge/templates/key-manager.yaml
@@ -4,13 +4,18 @@ kind: Deployment
 metadata:
   name: keymanager
 spec:
+  replicas: {{ .Values.edgeccs.replicaCount | default 1 }}
   selector:
     matchLabels:
-      app: keymanager
-  replicas: {{ .Values.edgeccs.replicaCount | default 1 }}
+      {{- include ".helm.selectorLabels" . | nindent 6 }}
   template:
     metadata:
+      {{- with .Values.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       labels:
+        {{- include ".helm.selectorLabels" . | nindent 8 }}
         app: keymanager
     spec:
       {{- if .Values.keymanager.volume }}
