--- a/charts/core-edge/templates/scs-deployment.yaml
+++ b/charts/core-edge/templates/scs-deployment.yaml
@@ -4,13 +4,18 @@ kind: Deployment
 metadata:
   name: scs
 spec:
+  replicas: {{ .Values.scs.replicaCount | default 1 }}
   selector:
     matchLabels:
-      app: scs
-  replicas: {{ .Values.scs.replicaCount | default 1 }}
+      {{- include ".helm.selectorLabels" . | nindent 6 }}
   template:
     metadata:
+      {{- with .Values.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       labels:
+        {{- include ".helm.selectorLabels" . | nindent 8 }}
         app: scs
     spec:
       hostNetwork: true
