--- a/charts/kafka-rest/values-dev.yaml
+++ b/charts/kafka-rest/values-dev.yaml
@@ -95,4 +95,4 @@ cp-schema-registry:
 
 ##Plain Text
 cp-kafka: ##TODO:Parameter store/Environment variables to store value
-  bootstrapServers: "PLAINTEXT://b-1.mskhtdevsaasuw21.40fm05.c2.kafka.us-west-2.amazonaws.com:9092,PLAINTEXT://b-2.mskhtdevsaasuw21.40fm05.c2.kafka.us-west-2.amazonaws.com:9092,PLAINTEXT://b-3.mskhtdevsaasuw21.40fm05.c2.kafka.us-west-2.amazonaws.com:9092"
+  bootstrapServers: "PLAINTEXT://b-1.mskhtdevsaasuw21.1jh58t.c2.kafka.us-west-2.amazonaws.com:9092,PLAINTEXT://b-2.mskhtdevsaasuw21.1jh58t.c2.kafka.us-west-2.amazonaws.com:9092,PLAINTEXT://b-3.mskhtdevsaasuw21.1jh58t.c2.kafka.us-west-2.amazonaws.com:9092"
