--- a/charts/postgresql/templates/service.yaml
+++ b/charts/postgresql/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if not (.Values.RDS) }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -14,3 +15,4 @@ spec:
       name: http
   selector:
     {{- include ".helm.selectorLabels" . | nindent 4 }}
+{{- end }}
