--- a/charts/core-baseline/Chart.yaml
+++ b/charts/core-baseline/Chart.yaml
@@ -35,8 +35,9 @@ dependencies:
     version: "^10.24.2"
     repository: https://helm.traefik.io/traefik
   - name: postgresql
-    version: "^0"
-    repository: "https://htaic.github.io/helm-charts"
+    version: "^0.1.9"
+    # repository: "https://htaic.github.io/helm-charts"
+    repository: "file://../postgresql"
   - name: redis
     version: "^0"
     repository: "https://htaic.github.io/helm-charts"
