--- a/charts/core-baseline/values.yaml
+++ b/charts/core-baseline/values.yaml
@@ -46,3 +46,8 @@ postgresql:
       # https://hub.docker.com/_/postgres
       - name: PGDATA
         value: /var/lib/postgresql/data/postgres # # To enable EFS on the cluster, use the following values in the root helm chart
+  
+  #TODO... comment this out after local testing
+  # If using RDS for postgres
+  RDS:
+    host: "YOUR_RDS_HOST"
