--- a/charts/complete-auth-service/templates/deployment.yaml
+++ b/charts/complete-auth-service/templates/deployment.yaml
@@ -42,6 +42,7 @@ spec:
           envFrom:
             - secretRef:
                 name: "baseline-postgresql-secret"
+            - secretRef:
                 name: "auth-service-secret"
             - configMapRef:
                 name: "baseline-configmap"
