fix: org-secret not the right var

--- a/charts/cloud-baseline/Chart.yaml
+++ b/charts/cloud-baseline/Chart.yaml
@@ -39,7 +39,8 @@ dependencies:
     repository: https://kubernetes-sigs.github.io/aws-efs-csi-driver/
   - name: postgresql
     version: "^0"
-    repository: "https://htaic.github.io/helm-charts"
+    # repository: "https://htaic.github.io/helm-charts"
+    repository: "file://../postgresql"
   - name: redis
     version: "^0"
     repository: "https://htaic.github.io/helm-charts"
