chore: add quotes to password

--- a/charts/cloud-baseline/templates/auth-secret.yaml
+++ b/charts/cloud-baseline/templates/auth-secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: "auth-service-secret"
 data:
-  DATABASE_PASSWORD: {{ .Values.postgresql.postgres.auth-password | b64enc }}
+  DATABASE_PASSWORD: "{{ .Values.postgresql.postgres.auth-password | b64enc }}"
 stringData:
   DATABASE_NAME: {{ .Values.postgresql.postgres.auth-db }}
   DATABASE_USER: {{ .Values.postgresql.postgres.auth-user }}
