--- a/charts/cloud-baseline/templates/org-secret.yaml
+++ b/charts/cloud-baseline/templates/org-secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: "org-service-secret"
 data:
-  DATABASE_PASSWORD: {{ .Values.postgresql.postgres.org-password | b64enc }}
+  DATABASE_PASSWORD: "{{ .Values.postgresql.postgres.org-password | b64enc }}"
 stringData:
   DATABASE_NAME: {{ .Values.postgresql.postgres.org-db }}
   DATABASE_USER: {{ .Values.postgresql.postgres.org-user }}
