--- a/charts/cloud-baseline/templates/auth-secret.yaml
+++ b/charts/cloud-baseline/templates/auth-secret.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   name: "auth-service-secret"
 data:
-  DATABASE_PASSWORD: "{{ .Values.postgresql.postgres.auth-password | b64enc }}"
+  DATABASE_PASSWORD: {{ .Values.postgresql.postgres.authpassword | b64enc }}
 stringData:
-  DATABASE_NAME: {{ .Values.postgresql.postgres.auth-db }}
-  DATABASE_USER: {{ .Values.postgresql.postgres.auth-user }}
+  DATABASE_NAME: {{ .Values.postgresql.postgres.authdb }}
+  DATABASE_USER: {{ .Values.postgresql.postgres.authuser }}
   DATABASE_HOST: "{{ include ".helm.fullname" . }}-postgresql"
