--- a/charts/cloud-baseline/templates/org-secret.yaml
+++ b/charts/cloud-baseline/templates/org-secret.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   name: "org-service-secret"
 data:
-  DATABASE_PASSWORD: "{{ .Values.postgresql.postgres.org-password | b64enc }}"
+  DATABASE_PASSWORD: {{ .Values.postgresql.postgres.orgpassword | b64enc }}
 stringData:
-  DATABASE_NAME: {{ .Values.postgresql.postgres.org-db }}
-  DATABASE_USER: {{ .Values.postgresql.postgres.org-user }}
+  DATABASE_NAME: {{ .Values.postgresql.postgres.orgdb }}
+  DATABASE_USER: {{ .Values.postgresql.postgres.orguser }}
   DATABASE_HOST: "{{ include ".helm.fullname" . }}-postgresql"
