--- a/charts/cloud-baseline/values.yaml
+++ b/charts/cloud-baseline/values.yaml
@@ -16,27 +16,7 @@ traefik:
 
 redis:
   redis:
-    replicaCount: 1
-    repository: redis
     password: YOUR_REDIS_PASSWORD
-    tag: latest
-    pullPolicy: Always
-    containerPort: 6379
-  service:
-    type: ClusterIP
-  resources:
-    requests:
-      cpu: 250m
-      memory: 750Mi
-  serviceAccount:
-    create: false
-    annotations: {}
-    name: ""
-  autoscaling:
-    enabled: false
-    minReplicas: 1
-    maxReplicas: 100
-    targetCPUUtilizationPercentage: 80
 
 # https://github.com/kubernetes-sigs/aws-efs-csi-driver/blob/master/charts/aws-efs-csi-driver/values.yaml
 aws-efs-csi-driver:
@@ -73,13 +53,13 @@ postgresql:
   postgres:
     db: postgres
     user: postgres
-    password: 'YOUR_POSTGRES_PASSWORD'
-    org-db: org_management
-    org-user: org_management_service
-    org-password: 'YOUR_ORG_DB_PASSWORD'
-    auth-db: auth
-    auth-user: auth_service
-    auth-password: 'YOUR_AUTH_DB_PASSWORD'
+    password: YOUR_POSTGRES_PASSWORD
+    orgdb: org_management
+    orguser: org_management_service
+    orgpassword: YOUR_ORG_DB_PASSWORD
+    authdb: auth
+    authuser: auth_service
+    authpassword: YOUR_AUTH_DB_PASSWORD
     replicaCount: 1
     repository: postgres
     tag: 14
