--- a/charts/redis/templates/secret.yaml
+++ b/charts/redis/templates/secret.yaml
@@ -5,5 +5,9 @@ metadata:
 data:
   REDIS_PASSWORD: {{ .Values.redis.password | b64enc }}
 stringData:
-  REDIS_HOST: {{ .Values.redis.hostname }}
   REDIS_PORT: "{{ .Values.redis.containerPort }}"
+  {{- if (hasKey .Values.redis "hostname") }}
+  REDIS_HOST: {{ .Values.redis.hostname }}
+  {{- else }}
+  REDIS_HOST: {{ include ".helm.fullname" . }}
+  {{- end }}
