chore: tweak org

--- a/charts/complete-org-service/templates/deployment.yaml
+++ b/charts/complete-org-service/templates/deployment.yaml
@@ -38,16 +38,12 @@ spec:
           image: {{ .Values.postgresUpdater.image }}:{{ .Values.image.tag }}
           {{ end }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          env:
-            - name: APP_PASS
-              value: {{ .Values.postgresUpdater.app_pass }}
           command: ['sh', '-c', '/home/developer/executecommands.sh']
           envFrom:
             - secretRef:
                 name: "baseline-postgresql-secret"
-            # TODO: Add cloud toggle for this    
-            # - secretRef:
-            #     name: "org-management-service-secret"
+            - secretRef:
+                name: "org-service-secret"
             - configMapRef:
                 name: "baseline-configmap"
       {{- end }}
