--- a/charts/cloud-baseline/templates/org-secret.yaml
+++ b/charts/cloud-baseline/templates/org-secret.yaml
@@ -7,4 +7,8 @@ data:
 stringData:
   DATABASE_NAME: {{ .Values.postgresql.postgres.orgdb }}
   DATABASE_USER: {{ .Values.postgresql.postgres.orguser }}
+  {{- if (hasKey .Values.postgresql.RDS "host") }}
+  DATABASE_HOST: {{ .Values.postgresql.RDS.host }}
+  {{- else }}
   DATABASE_HOST: "{{ include ".helm.fullname" . }}-postgresql"
+  {{- end }}
