--- a/charts/postgresql/templates/secret-configmap.yaml
+++ b/charts/postgresql/templates/secret-configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: "{{ .Release.Name }}-configmap"
 data:
   POSTGRES_DB: {{ .Values.postgres.db }}
-  {{- if (hasKey .Values.RDS "host") }}
+  {{- if (((.Values).RDS).host) }}
   POSTGRES_HOSTNAME: {{ .Values.RDS.host }}
   {{- else }}
   POSTGRES_HOSTNAME: {{ include ".helm.fullname" . }}
