--- a/charts/postgresql/templates/secret-configmap.yaml
+++ b/charts/postgresql/templates/secret-configmap.yaml
@@ -3,5 +3,9 @@ kind: ConfigMap
 metadata:
   name: "{{ .Release.Name }}-configmap"
 data:
-  POSTGRES_HOSTNAME: {{ include ".helm.fullname" . }}
   POSTGRES_DB: {{ .Values.postgres.db }}
+  {{- if (((.Values).RDS).host) }}
+  POSTGRES_HOSTNAME: {{ .Values.RDS.host }}
+  {{- else }}
+  POSTGRES_HOSTNAME: {{ include ".helm.fullname" . }}
+  {{- end }}
