--- a/charts/cloud-baseline/Chart.yaml
+++ b/charts/cloud-baseline/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.1
+version: 0.0.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -38,11 +38,13 @@ dependencies:
     version: "^2.3.6"
     repository: https://kubernetes-sigs.github.io/aws-efs-csi-driver/
   - name: postgresql
-    version: "^0"
+    version: "^0.1.9"
     repository: "https://htaic.github.io/helm-charts"
+    # repository: "file://../postgresql"
   - name: redis
-    version: "^0"
+    version: "^0.0.3"
     repository: "https://htaic.github.io/helm-charts"
+    # repository: "file://../redis"
   - name: reporting-services
     version: "^0"
     repository: "https://htaic.github.io/helm-charts"
