--- a/charts/cloud-baseline/Chart.yaml
+++ b/charts/cloud-baseline/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.0
+version: 0.0.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -37,14 +37,12 @@ dependencies:
   - name: aws-efs-csi-driver
     version: "^2.3.6"
     repository: https://kubernetes-sigs.github.io/aws-efs-csi-driver/
-  - name: postgresql
-    version: "^0.1.9"
-    repository: "https://htaic.github.io/helm-charts"
-    # repository: "file://../postgresql"
-  - name: redis
-    version: "^0.0.3"
-    repository: "https://htaic.github.io/helm-charts"
-    # repository: "file://../redis"
+  # - name: postgresql
+  #   version: "^0.1.9"
+  #   repository: "https://htaic.github.io/helm-charts"
+  # - name: redis
+  #   version: "^0.0.3"
+  #   repository: "https://htaic.github.io/helm-charts"
   - name: reporting-services
     version: "^0"
     repository: "https://htaic.github.io/helm-charts"
