--- a/charts/cloud-baseline/templates/auth-secret.yaml
+++ b/charts/cloud-baseline/templates/auth-secret.yaml
@@ -7,8 +7,8 @@ data:
 stringData:
   DATABASE_NAME: {{ .Values.postgresql.postgres.authdb }}
   DATABASE_USER: {{ .Values.postgresql.postgres.authuser }}
-  {{- if  (((.Values).RDS).host) }}
-  DATABASE_HOST: {{ .Values.postgresql.RDS.host }}
+  {{- if  ((((.Values).postgresql).RDS).host) }}
+  DATABASE_HOST: {{ .Values.RDS.host }}
   {{- else }}
   DATABASE_HOST: "{{ include ".helm.fullname" . }}-postgresql"
   {{- end }}
