--- a/charts/cloud-baseline/templates/org-secret.yaml
+++ b/charts/cloud-baseline/templates/org-secret.yaml
@@ -7,7 +7,7 @@ data:
 stringData:
   DATABASE_NAME: {{ .Values.postgresql.postgres.orgdb }}
   DATABASE_USER: {{ .Values.postgresql.postgres.orguser }}
-  {{- if  (((.Values).RDS).host) }}
+  {{- if  ((((.Values).postgresql).RDS).host) }}
   DATABASE_HOST: {{ .Values.postgresql.RDS.host }}
   {{- else }}
   DATABASE_HOST: "{{ include ".helm.fullname" . }}-postgresql"
