chore: this is why we do PRs...

--- a/charts/cloud-baseline/templates/auth-secret.yaml
+++ b/charts/cloud-baseline/templates/auth-secret.yaml
@@ -8,7 +8,7 @@ stringData:
   DATABASE_NAME: {{ .Values.postgresql.postgres.authdb }}
   DATABASE_USER: {{ .Values.postgresql.postgres.authuser }}
   {{- if  ((((.Values).postgresql).RDS).host) }}
-  DATABASE_HOST: {{ .Values.RDS.host }}
+  DATABASE_HOST: {{ .Values.postgresql.RDS.host }}
   {{- else }}
   DATABASE_HOST: "{{ include ".helm.fullname" . }}-postgresql"
   {{- end }}
