--- a/charts/complete-auth-service/values.yaml
+++ b/charts/complete-auth-service/values.yaml
@@ -11,9 +11,8 @@ image:
   hostname: auth
   domainPath: "auth"
   env:
-    # # TODO: This should be made toggleable for edge vs cloud...
-    # - name: OPERATION_ENV
-    #   value: edge
+    - name: OPERATION_ENV
+      value: edge
     - name: AWS_REGION
       value: YOUR_AWS_REGION
     - name: AWS_ACCOUNT
